--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,7 @@
 repos:
-- hooks:
-  - id: commitizen
-  repo: https://github.com/commitizen-tools/commitizen
+repo: https://github.com/commitizen-tools/commitizen
   rev: v2.35.0
+  hooks:
+  - id: commitizen
+    name: commitizen
+		stages: [commit-msg]
