--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,6 @@
 repos:
-repo: https://github.com/commitizen-tools/commitizen
-  rev: v2.35.0
-  hooks:
-  - id: commitizen
-    name: commitizen
-		stages: [commit-msg]
+  - repo: https://github.com/commitizen-tools/commitizen
+    rev: v2.35.0
+    hooks:
+      - id: commitizen
+        stages: [commit-msg]
